# PythonProjects

project0/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
project0/docs/: api.rst  conf.py  index.rst  overview.rst
project0/docs/_build/doctrees/: API.doctree  environment.pickle  index.doctree  overview.doctree
project0/docs/_build/html/: .buildinfo  API.html  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
project0/docs/_build/html/_sources/: API.rst.txt  overview.rst.txt
project0/src/: hello_world.py
project0/src/project_0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project0/tests/: environment.py  test_hw.py
project0/tests/features/: hello_world.feature
project0/tests/steps/: hw_cli.py
